syntax = "proto3";

package core;

option java_package = "com.windchat.proto.core";
option java_outer_classname = "UicProto";

// options for php
//option php_namespace = "Akaxin\\Proto\\Core";

enum UicStatus {
	UNUSED = 0; //未使用的的
	USED = 1; //已经使用的
	INVALIDATION = 2; //失效的
}

//最简单的用户信息，用于给别人呈现
message UicInfo {
	int32 id = 1; //uic_id
	string uic = 2; //uic
	string site_user_id = 3; //用户id
	string user_name = 4; //用户名称
	UicStatus status = 5; //是否可用的状态
	int64 create_time = 6; //生成的时间
	int64 use_time = 7; //使用的时间
}
